--- a/config.json
+++ b/config.json
@@ -1,1 +1,4 @@
-{"token": "8206540349:AAGrmTXKO3WXqt7nhHDHdqv23GYeioRTX5I", "chat_id": "6721115215"}
+{
+  "token": "8206540349:AAGrmTXKO3WXqt7nhHDHdqv23GYeioRTX5I",
+  "chat_id": "6721115215"
+}
